--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
 
-            <nav class="nav active">
+            <nav class="nav">
                 <button class="menu-close-btn">
                     <ion-icon name="close-outline"></ion-icon>
                 </button>
@@ -142,13 +142,13 @@
                 <div class="about-tab">
                     <ul class="tab-nav">
                         <li>
-                            <button class="one tab-button ">Experience</button>
+                            <button class="one tab-button active">Experience</button>
                         </li>
                         <li>
                             <button class="two tab-button ">Education</button>
                         </li>
                         <li>
-                            <button class="three tab-button active">Skills</button>
+                            <button class="three tab-button ">Skills</button>
                         </li>
                     </ul>
                     <div class="tab-content-group">
@@ -201,21 +201,21 @@
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/html-5.png" class="icon-skill"></img>
-                                    <a href="#" class="link-underline">Html</a>
+                                    <a href="https://www.w3schools.com/html/default.asp" class="link-underline">Html</a>
                                 </div>
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/css-3.png" class="icon-skill"></img>
-                                    <a href="#" class="link-underline">css</a>
+                                    <a href="https://www.w3schools.com/css/" class="link-underline">css</a>
                                 </div>
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/js.png" class="icon-skill"></img>
-                                    <a href="#" class="link-underline">javascript</a>
+                                    <a href="https://www.javascript.com/" class="link-underline">javascript</a>
                                 </div>
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
@@ -223,28 +223,28 @@
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/python.png" class="icon-skill"></img>
-                                    <a href="#" class="link-underline">python</a>
+                                    <a href="https://www.python.org/" class="link-underline">python</a>
                                 </div>
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/angular.png" class="icon-skill"></img>
-                                    <a href="#" class="link-underline">angular</a>
+                                    <a href="https://angular.io/" class="link-underline">angular</a>
                                 </div>
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/github.png" class="icon-skill"></img>
-                                    <a href="#" class="link-underline">Git</a>
+                                    <a href="https://git-scm.com/" class="link-underline">Git</a>
                                 </div>
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/nodejs.png" class="icon-skill"></img>
-                                    <a href="#" class="link-underline">nodejs</a>
+                                    <a href="https://nodejs.org/en/" class="link-underline">nodejs</a>
                                 </div>
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
