change order tag portfolio

--- a/index.html
+++ b/index.html
@@ -274,17 +274,14 @@
                     <div class="portfolio-carousel-inner">
                         <div class="portfolio-carousel-card">
                             <div class="card-head">
-                                <img src="./assets/img/slider-1.jpg" alt="" class="slider-img" width="100%">
+                                <img src="./assets/img/slider-1.jpg" alt="" class="slider-img" width="100%" loading="lazy">
                             </div>
                             <div class="card-body">
                                 <p>design</p>
                                 <h4><a href="">Sweet Cherry</a></h4>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="portfolio-carousel">
-                    <div class="portfolio-carousel-inner">
+                        
                         <div class="portfolio-carousel-card">
                             <div class="card-head">
                                 <img src="./assets/img/slider-2.jpg" alt="" class="slider-img" width="100%">
@@ -294,10 +291,7 @@
                                 <h4><a href="">Sweet Cherry</a></h4>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="portfolio-carousel">
-                    <div class="portfolio-carousel-inner">
+
                         <div class="portfolio-carousel-card">
                             <div class="card-head">
                                 <img src="./assets/img/slider-3.jpg" alt="" class="slider-img" width="100%">
@@ -307,10 +301,7 @@
                                 <h4><a href="">Blue Lemon</a></h4>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="portfolio-carousel">
-                    <div class="portfolio-carousel-inner">
+
                         <div class="portfolio-carousel-card">
                             <div class="card-head">
                                 <img src="./assets/img/slider-4.jpg" alt="" class="slider-img" width="100%">
@@ -320,10 +311,7 @@
                                 <h4><a href="">Sweet Cherry</a></h4>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="portfolio-carousel">
-                    <div class="portfolio-carousel-inner">
+
                         <div class="portfolio-carousel-card">
                             <div class="card-head">
                                 <img src="./assets/img/slider-5.jpg" alt="" class="slider-img" width="100%">
@@ -334,8 +322,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                
+                </div>                
             </section>
 
             <section class="section-padding" id="services">
