--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                 <div class="nav-footer">
                     <ul class="social-link">
                         <li>
-                            <a href="">
+                            <a href="https://www.facebook.com/profile.php?id=100009359214056">
                                 <ion-icon name="logo-facebook"></ion-icon>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="https://www.instagram.com/giangduog129/">
                                 <ion-icon name="logo-instagram"></ion-icon>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="https://www.linkedin.com/in/giang-d%C6%B0%C6%A1ng-29300b228/">
                                 <ion-icon name="logo-linkedin"></ion-icon>
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="https://github.com/giangduong1209">
                                 <ion-icon name="logo-github"></ion-icon>
                             </a>
                         </li>
@@ -99,8 +99,7 @@
             <section class="section-padding" id="home">
                 <h3 class="section-subtitle">Introduction</h3>
                 <h2 class="section-title">UI/UX Designer</h2>
-                <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
-                
+                <p class="section-desc">I am Giang Duong and also a UI/UX Designer. I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores.</p> 
             </section>
 
             <section class="section-padding" id="about">
@@ -133,11 +132,12 @@
                         <td><a href="mailto:giangduong120900@gmail.com" class="link-underline">giangduong120900@gmail.com</a></td>
                     </tr>
                 </table>
-
-                <button class="downloaded_cv">
-                    <ion-icon name="cloud-download-outline"></ion-icon>
-                    <span>Download cv</span>
-                </button>
+                <a href="./CV_Duong_Truong_Giang_Front_end_Dev_English.pdf" download="My-CV" style="width: 100%">
+                    <button class="downloaded_cv">
+                        <ion-icon name="cloud-download-outline"></ion-icon>
+                        <span>Download cv</span>
+                    </button>
+                </a>
 
                 <div class="about-tab">
                     <ul class="tab-nav">
