change text bio

--- a/index.html
+++ b/index.html
@@ -99,13 +99,18 @@
             <section class="section-padding" id="home">
                 <h3 class="section-subtitle">Introduction</h3>
                 <h2 class="section-title">UI/UX Designer</h2>
-                <p class="section-desc">I am Giang Duong and also a UI/UX Designer. I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores.</p> 
+                <p class="section-desc">I am Giang Duong and also a UI/UX Designer. I have worked on many projects as a Front-end
+                    Developer. I design and develop services for customers of all sizes, specializing in creating stylish, 
+                    modern website, web services and online stores.</p> 
             </section>
 
             <section class="section-padding" id="about">
                 <h3 class="section-subtitle">About Me</h3>
                 <h2 class="section-title">Biography</h2>
-                <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                <p class="section-desc">I'm a Front-end Developer. I'm from Ho Chi Minh City. I am
+                    passionate about creating a user-friendly and responsive. I love creating modern website templates that meet the needs of my customers. 
+                    I like working with people because they bring a lot of experience for me.    
+                </p>
                 <table class="about-table">
                     <tr>
                         <th>Name</th>
@@ -185,7 +190,7 @@
                                     <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                                 </div>
                             </div>
-                            <div class="content-card">
+                            <!-- <div class="content-card">
                                 <div class="card-head">
                                     <h4>Ton Duc Thang University</h4>
                                     <p>2018 - 2022</p>
@@ -194,7 +199,7 @@
                                     <h3>Engineer's Degree</h3>
                                     <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="three tab-content tab-content-skill">
