--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Background</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/media_query.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -421,7 +422,7 @@
                 <h3 class="section-subtitle">Contact</h3>
                 <h2 class="section-title">Get In Touch</h2>
                 <p class="section-desc">If you have any suggestion, project or even you want to say "Hello" , please fill out the form below and I will reply you shortly.</p>
-                <form action="#" class="contact-form">
+                <form action="" method="post" class="contact-form">
                     <div class="wrapper">
                         <div>
                             <label for="name">Name</label>
@@ -440,7 +441,7 @@
                         <label for="message">Message</label>
                         <textarea name="message" id="message"></textarea>>
                     </div>
-                    <button type="submit">Send Message</button>
+                    <button type="submit" name="submit">Send Message</button>
                 </form>
                 <div class="address">
                     <h4>Address</h4>
@@ -476,5 +477,22 @@
     <script src="./assets/js/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script>
+        $(document).ready(function(){
+            $(".contact-form").submit(function(e){
+                e.preventDefault();
+
+                alert("You're submited successfull");
+                // $.ajax({
+                //     url: '',
+                //     type: "post",
+                //     data: $('.contact-form').serialize(),
+                //     success: function(){
+                        
+                //     }
+                // })
+            })
+        })  
+    </script>
 </body>
 </html>
