--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ion-icon name="close-outline"></ion-icon>
                 </button>
 
-                <h4 class="nav-heading ">Menu</h4>
+                <h4 class="nav-heading">Menu</h4>
                 <ul>
                     <li class="nav-item">
                         <a href="#home" class="nav-link">Home</a>
@@ -443,7 +443,7 @@
                     </div>
                     <button type="submit" name="submit">Send Message</button>
                 </form>
-                <div class="alert">
+                <div class="alert active">
                     Your message has been recorded!
                 </div>
                 <div class="address">
@@ -480,20 +480,22 @@
     <script src="./assets/js/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <!-- <script>
+    <script>
         $(document).ready(function(){
             $(".contact-form").submit(function(e){
                 e.preventDefault();
+                
                 $.ajax({
                     url: 'action.php',
                     type: "post",
                     data: JSON,
                     success: function(){
-                        
+                        $(".alert").fadeIn();
+                        $(".alert").fadeOut(4000);
                     }
                 })
             })
         })  
-    </script> -->
+    </script>
 </body>
 </html>
