edit content skill

--- a/index.html
+++ b/index.html
@@ -191,16 +191,6 @@
                                     <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                                 </div>
                             </div>
-                            <!-- <div class="content-card">
-                                <div class="card-head">
-                                    <h4>Ton Duc Thang University</h4>
-                                    <p>2018 - 2022</p>
-                                </div>
-                                <div class="card-body">
-                                    <h3>Engineer's Degree</h3>
-                                    <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
-                                </div>
-                            </div> -->
                         </div>
 
                         <div class="three tab-content tab-content-skill">
@@ -209,21 +199,22 @@
                                     <img src="./assets/img/html-5.png" class="icon-skill"></img>
                                     <a href="https://www.w3schools.com/html/default.asp" class="link-underline">Html</a>
                                 </div>
-                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                <p>HTML stands for HyperText Markup Language. It is used to design web pages using a markup language. HTML is the combination of Hypertext and Markup language. Hypertext defines the link between the web pages. A markup language is used to define the text document within tag which defines the structure of web pages. This language is used to annotate (make notes for the computer) text so that a machine can understand it and manipulate text accordingl.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/css-3.png" class="icon-skill"></img>
                                     <a href="https://www.w3schools.com/css/" class="link-underline">css</a>
                                 </div>
-                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                <p>Cascading Style Sheets, fondly referred to as CSS, is a simply designed language intended to simplify the process of making web pages presentable. CSS allows you to apply styles to web pages. More importantly, CSS enables you to do this independent of the HTML that makes up each web page.
+                                    CSS is easy to learn and understand, but it provides powerful control over the presentation of an HTML document.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/js.png" class="icon-skill"></img>
                                     <a href="https://www.javascript.com/" class="link-underline">javascript</a>
                                 </div>
-                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                <p>JavaScript is a lightweight, cross-platform, and interpreted scripting language. It is well-known for the development of web pages, many non-browser environments also use it. JavaScript can be used for Client-side developments as well as Server-side developments. JavaScript contains a standard library of objects, like Array, Date, and Math, and a core set of language elements like operators, control structures, and statements.</p>
                             </div>
                             
                             <div class="skill-box">
@@ -231,28 +222,31 @@
                                     <img src="./assets/img/python.png" class="icon-skill"></img>
                                     <a href="https://www.python.org/" class="link-underline">python</a>
                                 </div>
-                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                <p>Python is a high-level, general-purpose and a very popular programming language. Python programming language (latest Python 3) is being used in web development, Machine Learning applications, along with all cutting edge technology in Software Industry. Python Programming Language is very well suited for Beginners, also for experienced programmers with other programming languages like C++ and Java. This specially designed Python tutorial will help you learn Python Programming Language in most efficient way, with the topics from basics to advanced (like Web-scraping, Django, Deep-Learning, etc.) with examples.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
-                                    <img src="./assets/img/angular.png" class="icon-skill"></img>
-                                    <a href="https://angular.io/" class="link-underline">angular</a>
+                                    <img src="./assets/img/reactjs.png" class="icon-skill"></img>
+                                    <a href="https://reactjs.org/" class="link-underline">reactjs</a>
                                 </div>
-                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                <p>React is a declarative, efficient, and flexible JavaScript library for building user interfaces. It’s ‘V’ in MVC. ReactJS is an open-source, component-based front end library responsible only for the view layer of the application. It is maintained by Facebook.
+                                    React uses a declarative paradigm that makes it easier to reason about your application and aims to be both efficient and flexible. It designs simple views for each state in your application, and React will efficiently update and render just the right component when your data changes.</p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/github.png" class="icon-skill"></img>
                                     <a href="https://git-scm.com/" class="link-underline">Git</a>
                                 </div>
-                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                <p>Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency. Git relies on the basis of distributed development of a software where more than one developer may have access to the source code of a specific application and can modify changes to it which may be seen by other developers. Initially designed and developed by Linus Torvalds for Linux kernel development in 2005.
+                                    Every git working directory is a full-fledged repository with complete history and full version-tracking capabilities, independent of network access or a central server. 
+                                </p>
                             </div>
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/nodejs.png" class="icon-skill"></img>
                                     <a href="https://nodejs.org/en/" class="link-underline">nodejs</a>
                                 </div>
-                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                <p> Node.js is an open-source and cross-platform runtime environment for executing JavaScript code outside a browser. You need to remember that NodeJS is not a framework and it’s not a programming language. Most people are confused and understand it’s a framework or a programming language. </p>
                             </div>
                         </div>
                     </div>
