--- a/index.html
+++ b/index.html
@@ -328,42 +328,52 @@
             <section class="section-padding" id="services">
                 <h3 class="section-subtitle">Services</h3>
                 <h2 class="section-title">What I Do</h2>
-                <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                <p class="section-desc">I specialize in designing modern websites for each different needs of customers. I develop websites store, businesses and services. In addition, I also receive personal websites for customers who need it.</p>
                 <div class="service-cards-group">
                     <div class="service-card">
                         <div class="card-body">
-                            <h3>Global Marketing</h3>
+                            <h3>Store Website</h3>
                             <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
                         </div>
                         <div class="card-footer">
-                            <span>Start fron</span>
+                            <span>Start from</span>
                             <div>$599</div>
                         </div>
                     </div>
                     <div class="service-card">
                         <div class="card-body">
-                            <h3>Global Marketing</h3>
+                            <h3>Business Website</h3>
                             <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
                         </div>
                         <div class="card-footer">
-                            <span>Start fron</span>
-                            <div>$599</div>
+                            <span>Start from</span>
+                            <div>$799</div>
                         </div>
                     </div>
                     <div class="service-card">
                         <div class="card-body">
-                            <h3>Global Marketing</h3>
+                            <h3>Services Website</h3>
                             <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
                         </div>
                         <div class="card-footer">
-                            <span>Start fron</span>
-                            <div>$599</div>
+                            <span>Start from</span>
+                            <div>$499</div>
+                        </div>
+                    </div>
+                    <div class="service-card">
+                        <div class="card-body">
+                            <h3>Personal Website</h3>
+                            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                        </div>
+                        <div class="card-footer">
+                            <span>Start from</span>
+                            <div>$99</div>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section class="section-padding" id="customers">
+            <!-- <section class="section-padding" id="customers">
                 <h3 class="section-subtitle">Customers</h3>
                 <h2 class="section-title">Happy People</h2>
                 <div class="wrapper">
@@ -410,7 +420,7 @@
                         <div class="subtitle">Customers</div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <section class="section-padding" id="contacts">
                 <h3 class="section-subtitle">Contact</h3>
