add content for store web

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <div class="service-card">
                         <div class="card-body">
                             <h3>Store Website</h3>
-                            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                            <p>Are you the owner of the store and need a website to increase sales profits? Please contact me, I specialize in designing and developing websites for stores with a variety of products.</p>
                         </div>
                         <div class="card-footer">
                             <span>Start from</span>
