--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </tr>
                     <tr>
                         <th>Age</th>
-                        <td>22 years</td>
+                        <td id="age"></td>
                     </tr>
                     <tr>
                         <th>Address</th>
